@@ -19,22 +19,34 @@ WriteMakefile
  , EXE_FILES    => []
  , AUTHOR       => 'Mark Overmeer'
  , ABSTRACT     => 'ExistDB interface over XML-RPC'
- , LICENSE      => 'perl'
+ , LICENSE      => 'perl_5'
+
+  , META_MERGE =>
+      { 'meta-spec' => { version => 2 }
+      , resources  =>
+          { repository =>
+              { type => 'git'
+              , url  => 'https://github.com/markov2/perl5-XML-ExistDB.git'
+              , web  => 'https://github.com/markov2/perl5-XML-ExistDB'
+              }
+          , homepage => 'http://perl.overmeer.net/CPAN/'
+          , license  => [ 'http://dev.perl.org/licenses/' ]
+          }
+      }
  );
 
 ### used by oodist during production of distribution
 sub MY::postamble { <<'__POSTAMBLE' }
 
 # for DIST
-EXTENDS		= ../XMLCompile:../XMLCache:../XMLRPC
-RAWDIR          = ../public_html/xml-existdb/raw
-DISTDIR         = ../public_html/xml-existdb/source
-LICENSE         = artistic
+EXTENDS		= ../XML-Compile:../XML-Compile-Cache:../../perl/XMLRPC
+RAWDIR		= ../public_html/xml-existdb/raw
+DISTDIR		= ../public_html/xml-existdb/source
+LICENSE		= perl
 SKIP_LINKS	= XML::LibXML
 
 # for POD
-FIRST_YEAR      = 2010
-EMAIL           = perl@overmeer.net
-WEBSITE         = http://perl.overmeer.net/xml-compile/
-PODTAIL		= ../XML-shared-podtail
+FIRST_YEAR	= 2010
+EMAIL		= markov@cpan.org
+WEBSITE		= http://perl.overmeer.net/CPAN/
 __POSTAMBLE
