@@ -3,6 +3,8 @@
 
 version 1.00:
 
+**** NEEDS TESTING ****
+
 	Changes:
 	- All functions now have the same return parameters:
 	  ($rc, $data, $trace)    A few functions returned ($rc, @list),
@@ -16,6 +18,10 @@ version 1.00:
 	  . listResourceTimestamps            getTimestamps
 	  . scanIndexTerms
 	  . indexedElements                   getIndexedElements
+	- some functions have been renamed:
+	  . getUser  --> getAccount
+	  . getUsers --> getAccounts
+	  . setUser  --> addAccount
 	- XML::ExistDB::RPC now extends XML::ExistDB
 	- XML::ExistDB does not extend XML::Compile::Cache anymore,
 	  but shares the schemas of the XML::Compile::RPC::Client if
@@ -27,6 +33,7 @@ version 1.00:
 	- getIndexedElements renamed to indexedElements
 	- extent existdb.xsd schema with exist:value [Alberto Simões]
 	- put <entry> in schema
+	- convert to GitHUB
 
 version 0.14: Sat Jul 25 23:41:24 CEST 2015
 
